src/css/index.less
// index.less
@headerBarHeight: 40px;
.animation(@name, @duration: 3s, @delay: 0s, @ease: ease-out) {
    -webkit-animation: @name @duration @ease @delay;
    -moz-animation:    @name @duration @ease @delay;
    -ms-animation:     @name @duration @ease @delay;
    -o-animation:     @name @duration @ease @delay;
    animation:     @name @duration @ease @delay;
}
.keyframes (@name, @rules) {
    @-webkit-keyframes ~'@{name}' { @rules(); }
    @-moz-keyframes ~'@{name}' { @rules(); }
    @-ms-keyframes ~'@{name}' { @rules(); }
    @-o-keyframes ~'@{name}' { @rules(); }
    @keyframes ~'@{name}' { @rules(); }
}
.keyframes(fadeInHalf, {
    0% { opacity: 0; }
    100% { opacity: 0.5; }
});
.keyframes(fadeIn, {
    0% { top: -15px; opacity: 0; }
    100% { top: 0px; opacity: 1; }
});
div.header-bar {
    a {
        text-decoration: none;
        color: inherit;
        &:hover { text-decoration: none; }
        &:visited { text-decoration: none; }
        &:focus {
            outline: none;
            text-decoration: none;
        }
    }
    position: absolute;
    display: flex;
    background-color: black;
    height: @headerBarHeight; width: 100%;
    top: 0px; left: 0px;
    font-weight: 300;
    letter-spacing: 2px;
    color: white;
    overflow: hidden;
    &::before {
        flex: none;
        width: 30px;
        content: "";
    }
    &::after {
        flex: none;
        width: 40px;
        content: "";
    }
    img.header-bar-logo {
        flex: none;
        margin-right: 28px;
        padding: 10px 0px;
        height: 20px;
        width: auto;
    }
    nav.header-bar-nav {
        flex: auto;
        div.header-bar-nav-item {
            display: inline-block;
            margin-right: 20px;
            height: @headerBarHeight - 3px;
            color: white;
            a {
                display: inline-block;
                padding: 0px 8px;
                font-size: 12px;
                color: inherit;
                line-height: @headerBarHeight - 3px;
                transition: color .6s ease;
                &:hover { font-weight: 400; }
            }
        }
    }
    nav.header-bar-subnav {
        flex: none;
        div.header-bar-subnav-item {
            display: inline-block;
            margin-left: 5px;
            height: 100%;
            color: white;
            a {
                display: inline-block;
                padding: 0px 8px;
                font-size: 12px;
                color: inherit;
                line-height: @headerBarHeight;
                transition: color .6s ease;
                &:hover { font-weight: 400; }
                img {
                    border-radius: 2px;
                    width: auto; height: 1.5em;
                    vertical-align: middle;
                    transition: background-color .6s ease;
                }
            }
        }
    }
    div.header-bar-submenu {
        margin-left: 20px;
        display: flex;
        align-items: center;
        font-size: 14px;
        line-height: 14px;
        img {
            border-radius: 2px;
            width: auto; height: 1.2em;
            vertical-align: middle;
        }
    }
    div.header-bar-collapse { display: none; }
    div.header-bar-collapse-menu-wrapper { display: none; }
}

@media (max-width: 767px) {
    div.header-bar {
        &::before {
            flex: none;
            width: 20px;
            content: "";
        }
        &::after {
            flex: none;
            width: 20px;
            content: "";
        }
        nav.header-bar-nav { display: none; }
        nav.header-bar-subnav { display: none; }
        div.header-bar-submenu { display: none; }
        div.header-bar-collapse {
            display: flex;
            flex: auto;
            text-align: right;
            div.header-bar-collapse-placeholder { flex: auto; }
            img.header-bar-collapse-hamburger {
                flex: none;
                width: 25px;
                cursor: pointer;
            }
            div.header-bar-collapse-hamburger {
                flex: none;
                display: inline-block;
                font-size: 27px;
                cursor: pointer;
            }
        }
        div.header-bar-collapse-menu-wrapper {
            display: block;
            position: fixed;
            width: 100%; height: 100%;
            top: 0px; left: 0px;
            div.header-bar-collapse-menu-frame {
                position: absolute;
                width: 100%; height: 100%;
                top: 0px; left: 0px;
                background-color: white;
                opacity: 0.5;
                cursor: pointer;
                .animation(fadeInHalf, .6s, 0s, ease);
            }
            div.header-bar-collapse-menu {
                display: flex;
                flex-direction: column;
                position: absolute;
                max-width: 100%;
                min-height: 400px; max-height: 100%;
                right: 0px; top: 0px;
                background-color: rgb(12, 12, 12);
                line-height: 2.5em;
                .animation(fadeIn, .6s, 0s, ease);
                div.header-bar-collapse-menu-header {
                    flex: none;
                    display: flex;
                    align-items: center;
                    border-bottom: 5px solid gray;
                    height: @headerBarHeight;
                    div.header-bar-collapse-menu-submenu {
                        flex: auto;
                        margin-left: 20px;
                        font-size: 14px;
                        img {
                            border-radius: 2px;
                            width: auto; height: 1.2em;
                            vertical-align: middle;
                        }
                    }
                    div.header-bar-collapse-menu-closer {
                        flex: none;
                        margin-left: auto;
                        margin-right: 20px;
                        font-size: 24px;
                        line-height: @headerBarHeight;
                        cursor: pointer;
                    }
                    img.header-bar-collapse-menu-closer {
                        flex: 0;
                        width: auto; height: 24px;
                        margin-right: 20px;
                        cursor: pointer;
                    }
                }
                nav.header-bar-collapse-menu-nav {
                    flex: auto;
                    padding: 20px 15px;
                    overflow: scroll;
                    div.header-bar-collapse-nav-item {
                        border-left: 2px solid gray;
                        margin-bottom: 40px;
                        color: white;
                        a {
                            display: block;
                            padding-left: 7px; 
                            color: inherit;
                            font-size: 20px;
                            line-height: 20px;
                        }
                    }
                }
                nav.header-bar-collapse-menu-subnav {
                    flex: none;
                    padding: 20px 45px;
                    text-align: center;
                    div.header-bar-collapse-subnav-item {
                        display: inline-block;
                        border-radius: 6px;
                        margin: 0px 10px;
                        height: 28px;
                        vertical-align: bottom;
                        a {
                            display: inline-block;
                            height: 28px; width: 100%;
                            font-size: 28px;
                            line-height: 28px;
                            color: white;
                            img {
                                height: 100%; width: auto;
                            }
                        }
                    }
                }
            }
        }
    }
}

